# LLVMDynamicTools

./: CMakeLists.txt
examples/: CMakeLists.txt  hotfix_example.cpp  hotfix_external_call_example.cpp
include/LLVMInterpreter/: HotFix.h  Interpreter.h  StackFrame.h
src/LLVMFuzzer/: BlockGenerator.cpp  CMakeLists.txt  GeneratorEnvironment.cpp  ProgramGenerator.cpp  main.cpp
src/LLVMInterpreter/: CMakeLists.txt  Evaluation.cpp  External.cpp  HotFix.cpp  InfoDump.cpp  Interpreter.cpp  main.cpp
